Change the behaviour of upload on fss

--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -4,6 +4,8 @@ CHANGES
 trunk
 =====
 
+* Change the behaviour of upload on fss. No more memory consuption for that now. We use always use fileiterator when inspecting big file. To achieve to that, VirtualDate override _read_data of OFS.Image.File to construct an clean FSSPdata. 
+
 * Monkey patching with collective.monkeypatcher. All monkey patches should be
   made that way.
   [glenfant]
