--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -1,17 +1,26 @@
 CHANGES
 #######
 
-trunk
-=====
+2.8.0rc4
+========
+
+Plone 4 support
+
+* (Deprecated) tabindex removed from all templates.
+  [glenfant]
 
 * Added a view for content items that allows managers to see where in the file
   system the fields are stored.
   [glenfant]
 
+2.8.0rc3
+========
+
 * Change the behaviour of upload on fss. No more memory consuption for that
   now. We use always use fileiterator when inspecting big file. To achieve to
   that, VirtualDate override _read_data of OFS.Image.File to construct an clean
   FSSPdata.
+  [yboussard]
 
 * Monkey patching with collective.monkeypatcher. All monkey patches should be
   made that way.
