--- a/iw/fss/CHANGES
+++ b/iw/fss/CHANGES
@@ -3,6 +3,11 @@ CHANGES
 
 In next release ...
 
+* Fixed an issue where the AT tool for scaling images would pass a
+  unicode file path which would result in a bug because the code was
+  only looking for a regular string (else deciding that it's a stream
+  object). [malthe]
+
 * Fixed an issue with HTTP range leading to a missing file size. With
   some clients (seen in Firefox 3.6), the ``end`` value is trivial and
   must be explicitly set to the file size before returning the
